...
    <string name="password_label">Password</string>
    <string name="login_button_text">Login</string>
    <string name="choose_language_label">Select a language</string>
    <string name="greeting_text">Welcome back, %1$s</string>
    <string name="tab_icon_rankings_title">Rankings</string>
    <string name="tab_icon_menu_title">Menu</string>
    <string name="all_languages_spinner_option">All languages</string>
    <string name="login_dialog_title">Please, wait</string>
    <string name="login_dialog_message">Verifying credentials…</string>
    <string name="warning_invalid_credentials">Invalid username or password</string>
    <string name="warning_connection_error">Connexion error, please verify your internet connection</string>
    <string name="warning_request_error">An error happened processing your request, please verify your internet connexion and try again</string>
    <string name="update_ranking_success_message">Rankings updated</string>
...
    <string name="default_last_synchro_date">not found</string>
    <string name="dictionary_activity_title">Dictionary</string>
    <string name="favorite_words_activity_title">Favorite words</string>
    <string name="ranking_activity_title">Rankings</string>
    <string name="login_activity_title">Login</string>
    <string name="loading_message">We are loading your results, please wait…</string>
    <string name="no_results_message">No result matching your search was found</string>
    <string name="profile_menu_item_title">Profile</string>
    <string name="search_account_menu_item_title">Search account</string>
    <string name="rankings_menu_item_title">Rankings</string>
    <string name="faq_menu_item_title">FAQ</string>
    <string name="faq_1_title">Who is the creator of this app?</string>
    <string name="faq_1_description">My name is Humberto Borges. I\'m a web and mobile developer interested in learn more about
...
